electic car's icon changed

--- a/src/assets/styles/components/CarCard.module.scss
+++ b/src/assets/styles/components/CarCard.module.scss
@@ -21,6 +21,8 @@
     object-position: center;
   }
 
+  
+
   .car_name {
     color: #333;
     font-family: inherit;
@@ -37,6 +39,7 @@
     align-content: flex-start;
     margin-bottom: 19px;
     margin-top: 19px;
+    
     .car_struct_list_item {
       display: flex;
       overflow: hidden;
@@ -50,6 +53,18 @@
       background-color: #fff;
       border-radius: 15px;
       margin-top: 12px;
+      .car_struct_image, svg{
+        width: 25px;
+        height: 25px;
+        @media screen and (max-width: 1614px) {
+          width: 20px;
+          height: 20px;
+        }
+        @media screen and (max-width: 1240px) {
+          width: 15px;
+          height: 15px;
+        }
+      }
       &:not(:last-child) {
         margin-right: 15px;
       }
