--- a/src/assets/styles/pages/AboutUs/AboutUs.module.scss
+++ b/src/assets/styles/pages/AboutUs/AboutUs.module.scss
@@ -5,10 +5,13 @@
   margin-bottom: 20px;
   background-image: url(@images/2016-bmw-m2-202-1585760824.webp);
   background-size: cover;
-  background-position: right;
+  background-position: center;
   height: 91vh;
   display: flex;
   align-items: center;
+  @media screen and (max-width: 768px) {
+    height: 100vh;
+  }
   .hero_box {
     margin-left: 5.2vw;
     position: relative;
@@ -17,7 +20,7 @@
       text-shadow: 0 0 10px #000;
       font-size: 3.2vw;
       font-family: "Inter";
-      margin-bottom: 4vw;
+      margin-bottom: 3vw;
       color: #fff;
       width: 60%;
     }
@@ -26,8 +29,12 @@
       border-radius: 0.5vw;
       color: #fff;
       border: none;
-      padding: 0.5vw 4vw;
-      font-size: 2vw;
+      padding: 0.7vw 5.5vw;
+      font-size: 20px;
+      @media screen and (max-width: 768px) {
+        padding: 0.7vw 4.5vw;
+        font-size: 14px;
+      }
     }
   }
 }
@@ -128,21 +135,21 @@
     }
   }
 }
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 490px) {
   .hero {
     height: 40vh;
     .hero_box {
       margin-left: 7vw;
       margin-top: 18vw;
       h1 {
-        width: 80%;
+        width: 70%;
         text-shadow: 0 0 10px #000;
         font-size: 15px;
       }
       button {
-        padding: 0.5rem 1.5rem;
-        border-radius: 2.5vw;
-        font-size: 12px;
+        padding: 1.5vw 6vw;
+        font-size: 14px;
+        border-radius: 5px;
         font-family: "Inter";
       }
     }
