--- a/src/assets/styles/pages/AboutUs/AboutUs.module.scss
+++ b/src/assets/styles/pages/AboutUs/AboutUs.module.scss
@@ -141,7 +141,7 @@
       }
       button {
         padding: 0.5rem 1.5rem;
-        border-radius: 2.5vw;
+        border-radius: 2vw;
         font-size: 12px;
         font-family: "Inter";
       }
@@ -167,11 +167,17 @@
           }
           img {
             width: 100%;
+            border-radius: 3vw;
+            height: 30vw;
           }
           article {
             font-size: 12px;
             text-align: center;
-            font-weight: 600;
+            font-weight: 500;
+
+            span {
+              font-weight: 600;
+            }
           }
         }
       }
