--- a/src/assets/styles/pages/AboutUs/AboutUs.module.scss
+++ b/src/assets/styles/pages/AboutUs/AboutUs.module.scss
@@ -173,9 +173,10 @@
             margin-bottom: 4vw;
           }
           img {
-            width: 100%;
+            max-width: 265px;
             border-radius: 3vw;
-            height: 30vw;
+            height: 110px;
+            object-fit: cover;
           }
           article {
             font-size: 12px;
