--- a/src/assets/styles/components/BurgerMenu.module.scss
+++ b/src/assets/styles/components/BurgerMenu.module.scss
@@ -1,7 +1,7 @@
 .mob_nav {
   position: fixed;
   top: 0px;
-  background-color: #F9F3F3;
+  background-color: #f9f3f3;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   padding: 15px;
   z-index: 99;
@@ -11,17 +11,17 @@
 .row {
   display: flex;
   justify-content: space-between;
-  div{
+  div {
     display: flex;
     align-items: center;
-    &:first-child{
+    &:first-child {
       width: 25%;
-      button{
-        color: #19746B;
+      button {
+        color: #19746b;
         font-family: "Inter";
         font-size: 24px;
         @media screen and (max-width: 490px) {
-          font-size:20px;
+          font-size: 20px;
         }
       }
       @media screen and (max-width: 540px) {
@@ -37,13 +37,12 @@
   cursor: pointer;
 }
 
-
 .menu {
   position: fixed;
   display: flex;
   justify-content: flex-end;
   width: 100vw;
-  top:64px;
+  top: 64px;
   z-index: 99;
   right: 0;
   visibility: hidden;
@@ -52,7 +51,7 @@
 .blur {
   width: 100vw;
   height: 100vh;
-  backdrop-filter: blur(2px);
+  background-color: rgba($color: #000000, $alpha: 0.3);
   position: absolute;
   visibility: hidden;
 }
@@ -60,21 +59,20 @@
 .menu_content {
   transition: all 0.4s;
   box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.25);
-  padding: 20px;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  background-color: #F9F3F3;
+  background-color: #f9f3f3;
   font-family: "Inter";
   font-weight: bold;
   z-index: 100;
   transform: translateX(100%);
-  border-bottom-left-radius: 30px;
-  a{
+  border-bottom-left-radius: 10px;
+  a {
     color: #000;
   }
-  p{
+  p {
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -82,17 +80,19 @@
     font-weight: 400;
   }
   ul {
-    gap: 15px;
     display: flex;
     flex-direction: column;
-    li{
+    li {
+      padding: 20px;
       display: flex;
-      justify-content: right;
+      &:not(:last-child) {
+        border-bottom: 1px solid #bcbcbc;
+      }
     }
     a {
       color: #000;
     }
-    button{
+    button {
       border: none;
       font-size: inherit;
       font-weight: inherit;
