--- a/src/assets/styles/components/BurgerMenu.module.scss
+++ b/src/assets/styles/components/BurgerMenu.module.scss
@@ -92,11 +92,15 @@
     a {
       color: #000;
     }
+    .dropDown{
+      padding: 0;
+    }
     button {
       border: none;
       font-size: inherit;
       font-weight: inherit;
       font-family: inherit;
+      padding: 0;
       background-color: transparent;
     }
   }
