--- a/src/assets/styles/pages/CardInfo/CardInfo.module.scss
+++ b/src/assets/styles/pages/CardInfo/CardInfo.module.scss
@@ -10,9 +10,14 @@
     gap: 8px;
     padding-bottom: 30px;
     p {
-      font-weight: 700;
+      font-weight: 500;
       font-size: 22px;
       color: #000000;
+    }
+    svg{
+      width: 35px;
+      height: 35px;
+      margin-right: 15px;
     }
     @media screen and (max-width: 1024px) {
       margin-top: 60px;
@@ -161,7 +166,7 @@
             overflow: hidden;
             white-space: nowrap;
             text-overflow: ellipsis;
-            font-weight: 600;
+            font-weight: 400;
           }
         }
       }
